syntax = "proto3";

import "decimal.proto";

option csharp_namespace = "Ingredients.Protos";

package ingredients;

service IngredientsService {
  
  rpc GetToppings(GetToppingsRequest) returns (GetToppingsResponse);
  rpc GetCrusts(GetCrustsRequest) returns (GetCrustsResponse);
  
  rpc DecrementToppings(DecrementToppingsRequest) returns (DecrementToppingsResponse);
  rpc DecrementCrusts(DecrementCrustsRequest) returns (DecrementCrustsResponse);
  
}

message DecrementToppingsRequest {
  repeated string topping_ids = 1;
}

message DecrementToppingsResponse { }

message DecrementCrustsRequest {
  string crust_id = 1;
}

message DecrementCrustsResponse { }

message GetToppingsRequest {
  
}

message GetToppingsResponse {
  repeated Topping toppings = 1;
}

message Topping {
  string id = 1;
  string name = 2;
  // Deprecated, use "price" instead
  double double_price = 3;
  customTypes.DecimalValue price = 4;
}

message GetCrustsRequest { }

message GetCrustsResponse {
  repeated Crust crusts = 1;
}

message Crust {
  string id = 1;
  string name = 2;
  int32 size = 3;
  // Deprecated, use "price" instead
  double double_price = 4;
  customTypes.DecimalValue price = 5;
}
